--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question4.html
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question4.html
@@ -36,191 +36,178 @@ pre {
 * Time Series. Probability Distributions, Survival Analysis
 
 ---
-A study aimed at estimating hazard rates and survival probabilities has produced the results of
-Nj=Number at risk and Dj=Decrements for different time intervals tj as shown in 
-CS2B_Mar22_Dataset3.csv. 
 
-The researchers analysed the results using Nelson-Aalen model 
-of comparison.
-
+[20]
+Q. 4) A random variable Z which represents claim amount in insurance is lognormally distributed 
+with parameters μ=10 and σ2= 4.
+i) Compute
+a) Likelihood that the claim will be of 5000. (to 2 significant figures) (2)
+b) Probability that the claim pay-out will be greater than 5000 (to 2 significant figures) (2)
+c) Maximum claim pay-out in the confidence interval [0.9,0.99] (3)
+d) Median of Z (2)
+e) Interquartile range of Z 
 ---
 
-#### Exercises
+ii) Generate a random sample of 100 observed claim amounts using seed value equal to 50 
+from this distribution. 
+a) Calculate the mean, median, standard deviation and skewness coefficient of the 
+sample. 
+b) Plot a histogram of the sample vector showing the probability densities, setting the 
+y-axis range from 0 to 10^-5 and x axis range from 0 to 10^5 for this graph and paste 
+the plot into your answer sheet. 
 
-i) Write down the formulae for the estimated integrated hazard and the estimated variance of 
-this estimator, using the Nelson-Aalen model. 
-
-ii) Find the estimated integrated hazard and the estimated variance of this estimator for the 
-given data for each time `\(t_j\)`. 
-
-
----
-
-
-iii) Produce a scatter plot in R along with corresponding 95% confidence intervals for the 
-Nelson-Aalen model. Paste the plot in the answer.
-
-iv) Compute the survival function according to the Kaplan Meier estimate. 
-
-v) Demonstrate numerically the validity of the inequality relationship between the survival 
-function using the Nelson Aalen model and the Kaplan Meier model using the data in this 
-study. 
 
 
 ---
-
-#### Part  (i)
-For the Nelson‐Aalen model the estimated integrated hazard is calculated as:
-
----
-
-The estimated variance of the estimator of the integrated hazard is 
-calculated as: 
- 
- 
---- 
-
-#### Part (b)
-
+[20 Marks]
+Solution 4:
+# i)
+# a)
 
 ```r
-data = read.csv("CS2B_Mar22_Dataset3.csv")
-names(data) = c("j","tj","nj","dj")
+mu = 10
+var = 4
 ```
-
-
-
-```r
-data$lambda = cumsum(data$dj/data$nj) 
-data$sdlambda=sqrt(cumsum(data$dj*(data$nj-data$dj)/data$nj^3)) 
-data
-```
-
-```
-##     j tj  nj dj lambda sdlambda
-## 1   1  4 100  2 0.0200   0.0140
-## 2   2  5  98  2 0.0404   0.0200
-## 3   3  8  96  1 0.0508   0.0225
-## 4   4 10  90  3 0.0842   0.0294
-## 5   5 11  87  1 0.0957   0.0316
-## 6   6 15  86  0 0.0957   0.0316
-## 7   7 20  76  5 0.1614   0.0425
-## 8   8 22  71  2 0.1896   0.0468
-## 9   9 24  67  1 0.2045   0.0491
-## 10 10 25  66  1 0.2197   0.0513
-## 11 11 29  61  1 0.2361   0.0539
-## 12 12 30  60  1 0.2527   0.0563
-## 13 13 33  58  4 0.3217   0.0654
-## 14 14 35  54  2 0.3588   0.0703
-## 15 15 36  52  1 0.3780   0.0728
-## 16 16 40  50  1 0.3980   0.0755
-## 17 17 45  49  1 0.4184   0.0781
-## 18 18 47  45  3 0.4851   0.0865
-## 19 19 49  42  1 0.5089   0.0897
-## 20 20 50  40  1 0.5339   0.0930
-## 21 21 54  38  2 0.5865   0.0998
-## 22 22 55  35  3 0.6722   0.1105
-## 23 23 58  30  2 0.7389   0.1195
-## 24 24 60  27  2 0.8130   0.1297
-## 25 25 61  22  5 1.0402   0.1575
-```
-
-```r
-data$varlambda=cumsum(data$dj*(data$nj-data$dj)/data$nj^3) 
-```
-
 
 ---
 
 
 ```r
-head(data)
+dlnorm(5000,mu,sqrt(var))
 ```
 
 ```
-##   j tj  nj dj lambda sdlambda varlambda
-## 1 1  4 100  2 0.0200   0.0140  0.000196
-## 2 2  5  98  2 0.0404   0.0200  0.000400
-## 3 3  8  96  1 0.0508   0.0225  0.000507
-## 4 4 10  90  3 0.0842   0.0294  0.000865
-## 5 5 11  87  1 0.0957   0.0316  0.000996
-## 6 6 15  86  0 0.0957   0.0316  0.000996
+## [1] 0.0000303
 ```
-
----
-
-#### Part (iii)
-
 
 ```r
-plot(c(0,data$tj),c(0,data$lambda),
-  type="s",
-  main="Nelson-Aalen estimator of the integrated hazard",
-  xlab="Time t",
-  ylab="Integrated hazard") 
+## [1] 3.030741e-05
+# The likelihood that the claim will be of 5000 is 0.000030
+
+# b)
+1-plnorm(5000,mu,sqrt(var))
 ```
 
-![](L2-Question5_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+```
+## [1] 0.771
+```
+
+```r
+## [1] 0.7707756
+# probability that the claim payout will be greater than 5000 is 0.77
+```
 
 ---
 
 
 ```r
-plot(c(0,data$tj),c(0,data$lambda),type="s",
-main="Nelson-Aalen estimator of the integrated hazard",
-xlab="Time t",ylab="Integrated hazard")
-
-lines(data$tj,data$lambda-1.96*data$sdlambda,type="s",lty=2, col="blue")
-lines(data$tj,data$lambda+1.96*data$sdlambda,type="s",lty=2, col="blue")
+# c)
+qlnorm(0.9,mu,sqrt(var))
 ```
 
-
----
-
-![](L2-Question5_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
----
-
-#### Part (iv)
+```
+## [1] 285816
+```
 
 ```r
-data$Survival_KM = cumprod(1-data$dj/data$nj)
-data$Survival_KM
+## [1] 285815.9
+qlnorm(0.99,mu,sqrt(var))
 ```
 
 ```
-##  [1] 0.980 0.960 0.950 0.918 0.908 0.908 0.848 0.824 0.812 0.800 0.786 0.773
-## [13] 0.720 0.693 0.680 0.666 0.653 0.609 0.595 0.580 0.549 0.502 0.469 0.434
-## [25] 0.335
+## [1] 2309856
 ```
+
+```r
+## [1] 2309856
+```
+
+maximum claim payout in the confidence interval [0.9,0.99] is [285815.9, 23
+09856]
 
 ---
 
-#### Part (v)
+# d) 
+qlnorm(0.5,mu,sqrt(var))
+## [1] 22026.47
+#Median of Z is 22026.47
+ (2)
+# e)
+qlnorm(0.75,mu,sqrt(var))-qlnorm(0.25,mu,sqrt(var))
+## [1] 79162.81
+# Interquartile range for Z is 79162.81
 
-The inequality states that:
- 
-Survival function of Kaplan Meir SKM(t) &lt; survival function of Nelson Aalen SNA(t) 
-To demonstrate the inequality:
+---
+
+# ii)
+a)
+
+```r
+set.seed(50)
+a=rlnorm(100,mu,sqrt(var))
+```
 
 
+```r
+mean(a)
+```
+
+```
+## [1] 121227
+```
+
+```r
+## [1] 121227.3
+median(a)
+```
+
+```
+## [1] 22785
+```
+
+```r
+## [1] 22785.05
+```
 ---
 
 
 ```r
-data$Survival_NA = exp(-data$lambda)
-sum(data$Survival_KM&lt;data$Survival_NA)
+sd(a)
 ```
 
 ```
-## [1] 25
+## [1] 481295
+```
+
+```r
+## [1] 481295.3
+
+#skewness(a)
+## [1] 8.163985
+```
+
+
+
+```r
+sk = function(x) sum((x-mean(x))^3)/(100*(sd(x))^3)
+sk(a)
+```
+
+```
+## [1] 8.04
+```
+
+```r
+## [1] 8.041831
 ```
 
 ---
 
-Since all the values are true, the inequality is proved
+# (b)
+hist(a, freq = FALSE,xlim = c(0,100000),ylim = c(0,0.00001))
+#hist(a,freq = FALSE)
 
-
-
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
