--- a/00-H2-CS2B-ASI-March-2021/Question_5.html
+++ b/00-H2-CS2B-ASI-March-2021/Question_5.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -36,17 +36,24 @@ pre {
 
 ---
 
+#### Exercise
 
 Q. 5) A primary school has two wings A and B. The students can change their Wing freely. It was 
 observed that the rate of movement is dependent on the age ‘x’ of the student (ranging from 
-5 to 15). The rate of movement from A to B = [0.08*x – 0.2] and the rate of movement from 
-B to A = [0.05 * x + 0.1]. 
+5 to 15). 
+
+* The rate of movement from A to B = [0.08*x – 0.2] 
+* The rate of movement from B to A = [0.05 * x + 0.1]. 
 
 ---
 
-i) Write a code to calculate the generator matrix G(x). Calculate the rate at which a 12 
-year old student will move from wing B to A and from A to B. 
+#### Exercise 1 
 
+Write a code to calculate the ***generator matrix*** G(x). 
+Calculate the rate at which a 12 year old student will move from wing B to A and from A to B. 
+
+
+* write a function called &lt;tt&gt;gen.matrix()&lt;/tt&gt;
 
 --
 
@@ -71,13 +78,14 @@ sigmaBA=function(x){
 
 ```r
 gen.matrix=function(x){ 
- muAB=sigmaAB(x) 
- muBA=sigmaBA(x) 
- muAA=-muAB 
- muBB=-muBA 
+ muAB = sigmaAB(x) 
+ muBA = sigmaBA(x) 
+ muAA = -muAB 
+ muBB = -muBA 
  movement.rates = c(muAA,muBA,muAB,muBB) 
  X =(matrix(movement.rates, 2, 2)) 
- X} 
+ X
+ } 
 ```
 
 ---
@@ -96,24 +104,27 @@ gen.matrix(12)
 ---
 #### Exercise 2
 
-Over a very small time period h, the transition probability matrix P(t,t+h) can be 
+* Over a very small time period `\(h\)`, the transition probability matrix P(t,t+h) can be 
 approximated as P(t,t+h) = I + h*G(t); I is the identity matrix. 
 
-Using this, calculate the 
+* Using this, calculate the 
 probability that a 8 year old will move to Wing B in next 5 years in case h=1/365. 
 
 ---
 
 
-```r
+```{.r .numberLines}
 calc.prob.matrix=function(s,t,h){ 
- Ph=diag(2)+gen.matrix(s)*h 
- temp.matrix=Ph 
- for (j in 1:((t-s)/h-1)){ 
- temp.matrix=temp.matrix%*%Ph 
- Ph=diag(2)+gen.matrix(s+h*j)*h 
- } 
- temp.matrix 
+ 
+  Ph=diag(2)+gen.matrix(s)*h 
+  temp.matrix=Ph 
+ 
+  for (j in 1:((t-s)/h-1)){ 
+    temp.matrix = temp.matrix %*% Ph 
+    Ph = diag(2) + gen.matrix(s+h*j)*h 
+    } 
+  
+  temp.matrix 
 } 
 ```
 
@@ -131,6 +142,9 @@ calc.prob.matrix(8,5,1/365)
 ```
 
 The rate of moving to Wing B = 0.3682517. 
+
+---
+
 
 ---
     </textarea>
