--- a/00-H1-CS1B-ASI-March-2021/Question_4.html
+++ b/00-H1-CS1B-ASI-March-2021/Question_4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -274,7 +274,9 @@ Part 10
 Calculate the p-value of a hypothesis test for this suggestion (slope equal to 10), by 
 creating a suitable test statistic. 
 
-Let Ho: Beta = 10 and H1: Beta not equal to 10 
+Let 
+* Ho: Beta = 10 
+* H1: Beta not equal to 10 
 
 
 ```r
@@ -336,7 +338,7 @@ y
 ## [1] 50821.17
 ```
 
-With a marketing spend of $4,500, the Sales would be $50,821. 
+With a marketing spend of \$4,500, the Sales would be \$50,821. 
 
 ---
     </textarea>
