--- a/00-F2-CS2B-ASI-Nov2020/F2-Question4.html
+++ b/00-F2-CS2B-ASI-Nov2020/F2-Question4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -18,48 +18,71 @@ class: center, middle, inverse, title-slide
 
 
 
+### Data 
 
-Consider the data set ‘Covid_2019.csv’ (name it covid19) where the first row of the csv file
-contains the headings for the columns.
+Consider the data set ‘Covid_2019.csv’.The first row of the csv file
+contains the headings for the columns. Import it into the R environment as &lt;tt&gt;covid19&lt;/tt&gt; 
 
+---
 
 #### Exercises
-i)
-Print the number of missing values in each of the columns and create a new data set
-‘covid19_1’ by removing all the missing values.
-From covid19_1, use the columns from Population Density (8th column) to Life Expectancy
-(17th column) to answer the following questions.
 
-ii) Create a new data frame “Covid_Cluster” containing only the above mentioned
-columns. Normalize all the columns of the data frame using the scale function. (3)
+1. Print the number of missing values in each of the col umns and create a new data set
+‘&lt;tt&gt;covid19_1&lt;/tt&gt;’ by removing all the missing values. From &lt;tt&gt;covid19_1&lt;/tt&gt;, use the columns from Population Density (8th column) to Life Expectancy(17th column) to answer the following questions.
 
-iii) Classify the countries into five groups by using the values obtained from (ii) applying
+2. Create a new data frame “&lt;tt&gt;Covid_Cluster&lt;/tt&gt;” containing only the above mentioned
+columns. Normalize all the columns of the data frame using the scale function. 
+
+3. Classify the countries into five groups by using the values obtained from Part 2 applying
 K-Means clustering algorithm. It is mandatory to set a seed value of 100 before
 executing the algorithm. Print the number of countries in each cluster. 
 
+4. What proportion of total countries in each cluster are severe with respect to COVID-
+19? You can use the “Severe” column from the original dataset. 
 
-#### Exercises
+5. Print the total number of cases and total number of deaths for each cluster.
 
-iv) What proportion of total countries in each cluster are severe with respect to COVID-
-19? You can use the “Severe” column from the original dataset. (5)
-v) Print the total number of cases and total number of deaths for each cluster.
 
---- 
 
-http://www.actuariesindia.org/downloads/Year_2020_November_Exam/CS2B_COVID_2019.csv
-CS2B_Mortality_Investigation
-http://www.actuariesindia.org/downloads/Year_2020_November_Exam/CS2B_Mortality_
 
 
 ---
 
-#### Exercise 1
+### Part 1
 
 
 ```r
 covid19 &lt;- read.csv("Covid_2019.csv")
-missingvalues &lt;- sapply(covid19,FUN = function(x)sum(is.na(x)))
-missingvalues
+dim(covid19)
+```
+
+```
+## [1] 208  18
+```
+
+
+```r
+### Summary of sum of the columns
+summary( covid19[ , 14:17] )
+```
+
+```
+##  female_smokers   male_smokers   hospital_beds_per_thousand life_expectancy
+##  Min.   : 0.10   Min.   : 7.70   Min.   : 0.100             Min.   :53.28  
+##  1st Qu.: 1.90   1st Qu.:21.40   1st Qu.: 1.300             1st Qu.:69.02  
+##  Median : 5.90   Median :31.20   Median : 2.320             Median :75.05  
+##  Mean   :10.32   Mean   :32.63   Mean   : 3.013             Mean   :73.43  
+##  3rd Qu.:18.95   3rd Qu.:41.30   3rd Qu.: 3.930             3rd Qu.:78.92  
+##  Max.   :44.00   Max.   :78.10   Max.   :13.800             Max.   :86.75  
+##  NA's   :69      NA's   :71      NA's   :45                 NA's   :3
+```
+
+---
+
+
+```r
+missingvalues&lt;-sapply(covid19,FUN = function(x)sum(is.na(x))) 
+missingvalues 
 ```
 
 ```
@@ -82,18 +105,36 @@ missingvalues
 ##            life_expectancy                     Severe 
 ##                          3                          0
 ```
+---
 
-
-e
-4
-e
-4
-s
+### Part 1
 
 
 ```r
-covid19_1&lt;-na.omit(covid19)
+covid19_1 &lt;- covid19[complete.cases(covid19),]
+dim(covid19_1)
 ```
+
+```
+## [1] 126  18
+```
+
+
+```r
+### Summary of sum of the columns
+summary(covid19_1[ , 8:11] )
+```
+
+```
+##  population_density   median_age    aged_65_older    gdp_per_capita    
+##  Min.   :   1.98    Min.   :15.10   Min.   : 1.144   Min.   :   752.8  
+##  1st Qu.:  43.10    1st Qu.:26.35   1st Qu.: 4.424   1st Qu.:  6404.7  
+##  Median :  87.25    Median :32.40   Median : 8.213   Median : 15827.4  
+##  Mean   : 227.30    Mean   :32.69   Mean   :10.084   Mean   : 22357.3  
+##  3rd Qu.: 205.50    3rd Qu.:40.67   3rd Qu.:15.390   3rd Qu.: 32558.2  
+##  Max.   :7915.73    Max.   :48.20   Max.   :27.049   Max.   :116935.6
+```
+
 
 ---
 
@@ -101,11 +142,23 @@ covid19_1&lt;-na.omit(covid19)
 
 
 
-```r
-Covid_Cluster&lt;-covid19_1[,c("population_density","median_age","aged_65_older","gdp_per_capita",
-"cardiovasc_death_rate","diabetes_prevalence","female_smokers",
-"male_smokers","hospital_beds_per_thousand","life_expectancy")]
 
+```r
+Covid_Cluster&lt;-covid19_1[,8:17]
+names(Covid_Cluster)
+```
+
+```
+##  [1] "population_density"         "median_age"                
+##  [3] "aged_65_older"              "gdp_per_capita"            
+##  [5] "cardiovasc_death_rate"      "diabetes_prevalence"       
+##  [7] "female_smokers"             "male_smokers"              
+##  [9] "hospital_beds_per_thousand" "life_expectancy"
+```
+
+
+
+```r
 Covid_Cluster&lt;-scale(Covid_Cluster)
 ```
 
@@ -113,10 +166,14 @@ Covid_Cluster&lt;-scale(Covid_Cluster)
 
 #### Part 3
 
+Classify the countries into five groups by using the values obtained from Part 2 applying
+K-Means clustering algorithm. It is mandatory to set a seed value of 100 before
+executing the algorithm. Print the number of countries in each cluster. 
+
 
 ```r
 set.seed(100)
-cluster1&lt;-kmeans(Covid_Cluster,centers = 5)
+cluster1 &lt;- kmeans(Covid_Cluster,centers = 5)
 cluster1$size
 ```
 
@@ -128,6 +185,8 @@ cluster1$size
 
 #### Part 4
 
+What proportion of total countries in each cluster are severe with respect to COVID-
+19? You can use the “Severe” column from the original dataset. 
 
 
 ```r
@@ -168,34 +227,6 @@ prop.table(table(covid19_1$cluster,covid19_1$Severe),margin = 1)
 ##   4 0.7391304 0.2608696
 ##   5 0.8787879 0.1212121
 ```
-&gt; table(covid19_1$cluster,covid19_1$Severe)
-No Yes
-1 16
-5
-2 27
-1
-3 10 16
-4 15
-6
-5 15 15
-&gt; prop.table(table(covid19_1$cluster,covid19_1$Severe),margin = 1)
-1
-2
-3
-4
-5
-No
-0.76190476
-0.96428571
-0.38461538
-0.71428571
-0.50000000
-Yes
-0.23809524
-0.03571429
-0.61538462
-0.28571429
-0.50000000
 
 
 
@@ -206,46 +237,49 @@ Yes
 
 
 ```r
-aggregate(total_cases~cluster,data = covid19_1, FUN = "sum")
+cbind(
+  aggregate(total_cases~cluster,data = covid19_1, FUN = "sum"),
+
+  aggregate(total_deaths~cluster,data = covid19_1, FUN = "sum")
+)
 ```
 
 ```
-##   cluster total_cases
-## 1       1     4833767
-## 2       2     6558014
-## 3       3     1446595
-## 4       4     1238502
-## 5       5     2643637
-```
-
-```r
-aggregate(total_deaths~cluster,data = covid19_1, FUN = "sum")
-```
-
-```
-##   cluster total_deaths
-## 1       1       181850
-## 2       2       318579
-## 3       3        33944
-## 4       4        32231
-## 5       5        56431
+##   cluster total_cases cluster total_deaths
+## 1       1     4833767       1       181850
+## 2       2     6558014       2       318579
+## 3       3     1446595       3        33944
+## 4       4     1238502       4        32231
+## 5       5     2643637       5        56431
 ```
 
 ---
 
+#### Using {tidyverse}
+
 
 ```r
-aggregate(total_deaths~cluster,data = covid19_1, FUN = "sum")
+library(tidyverse)
+covid19_1 %&gt;% group_by(cluster)%&gt;%
+  summarize(total_cases = sum(total_cases),
+            total_deaths = sum(total_deaths)
+            )
 ```
 
 ```
-##   cluster total_deaths
-## 1       1       181850
-## 2       2       318579
-## 3       3        33944
-## 4       4        32231
-## 5       5        56431
+## # A tibble: 5 x 3
+##   cluster total_cases total_deaths
+##     &lt;int&gt;       &lt;int&gt;        &lt;int&gt;
+## 1       1     4833767       181850
+## 2       2     6558014       318579
+## 3       3     1446595        33944
+## 4       4     1238502        32231
+## 5       5     2643637        56431
 ```
+
+---
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
