--- a/00-I1-CS1B-FIA-September-2021/Question_2.html
+++ b/00-I1-CS1B-FIA-September-2021/Question_2.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -49,7 +49,7 @@ including the line ***set.seed(1234)*** at the start.
 
 ---
 
-Use the command ***set.seed(1234)*** to initialise the random number generator. 
+Use the command &lt;tt&gt;set.seed(1234)&lt;/tt&gt; to initialise the random number generator. 
 
 
 #### Exercises
@@ -66,7 +66,7 @@ with parameter `\(\lambda  = 5\)`.
 mean. Estimate the parameter `\(\lambda\)`  using the maximum likelihood estimator and 
 the sample in part 1
 
-6. Generate another sample of size n = 180 from an Exponential 
+6. Generate another sample of size `\(n = 180\)` from an Exponential 
 distribution with parameter `\(\lambda  = 5\)` and estimate the parameter `\(\lambda\)`  using 
 the maximum likelihood estimator and the new sample. 
 
